# firebird_peregrine_falcon

./: CLAUDE.md  Cargo.toml  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  SETUP.md  config.example.toml
.github/workflows/: ci.yml
duckdb_extension/: CMakeLists.txt
duckdb_extension/src/: firebird_extension.cpp  firebird_extension.hpp
src/: extractor.rs  main.rs
