[package]
name = "peregrine_falcon_miramar"
version = "1.0.0"
edition = "2021"
authors = ["Firebird Peregrine Falcon Team"]
description = "World's fastest Firebird-to-Parquet extractor with 23 expert-level optimizations"

[dependencies]
anyhow = "1.0"
rayon = "1.10"
arrow = "53"
parquet = "53"
num_cpus = "1.0"
sha2 = "0.10"
crossbeam-channel = "0.5"
crossbeam = "0.8"  # For lock-free queue
rsfbclient = { version = "0.26", default-features = true, features = ["native_client"] }
clap = { version = "4.5", features = ["derive"] }
memmap2 = "0.9"
bumpalo = "3.14"  # Arena allocator for zero-copy optimizations

[profile.release]
opt-level = 3
lto = "fat"  # Fat LTO for maximum optimization
codegen-units = 1
panic = "abort"
# For PGO:
# Step 1: RUSTFLAGS="-Cprofile-generate=/tmp/pgo-data" cargo build --release
# Step 2: Run with typical workload
# Step 3: RUSTFLAGS="-Cprofile-use=/tmp/pgo-data/merged.profdata" cargo build --release

